# gnome-ocr

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DISTRIBUTION.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  RELEASE_READY.md  pyproject.toml  requirements.txt  test_structure.py  validate_cv_rapidocr.py  validate_cv_rapidocr_batch.py  validate_tesseract.py
.github/workflows/: release.yml
archive/: validate_paddle.py  validate_rapidocr.py  validate_tesseract.py  validate_v3.py
debian/: changelog  control  copyright  install  rules
install/: check_screenshot_tools.sh  com.github.ishusinghse.gnome-text-extractor.metainfo.xml  install.sh  text-extractor.desktop
scripts/: build-deb.sh  build-dist.sh  check-dist.sh  quick-ref.sh  test-deb.sh
text_extractor/: __init__.py  backend.py  desktop.py  main.py
