[project]
name = "gnome-text-extractor"
version = "1.0.0"
description = "A smart OCR tool for GNOME desktop with intelligent image preprocessing"
authors = [
    {name = "IshuSinghSE", email = "ishu@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["ocr", "gnome", "screenshot", "text-extraction", "desktop"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Gnome",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: Capture :: Screen Capture",
    "Topic :: Text Processing",
]

dependencies = [
    "rapidocr-onnxruntime>=1.3.0",
    "onnxruntime>=1.16.0",
    "opencv-python-headless>=4.8.0",
    "pyperclip>=1.8.2",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
text-extractor = "text_extractor.main:main"

[project.urls]
Homepage = "https://github.com/IshuSinghSE/gnome-ocr"
Repository = "https://github.com/IshuSinghSE/gnome-ocr"
Issues = "https://github.com/IshuSinghSE/gnome-ocr/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["text_extractor"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = []
